--- a/style.css
+++ b/style.css
@@ -32,3 +32,23 @@
     width: 100%;
     
 }
+
+input[type=radio]:checked~.accordion-content>.accordion-item_img {
+    max-width: 55%;
+    transition: 1s;
+ }
+ 
+ input[type=radio]:checked~.fa-sharp {
+     transform: rotate(180deg);
+     transition: 1s;
+ }
+ 
+ .accordion-item_input:not(:checked):hover~.accordion-content>.accordion-item_img {
+     max-width: 55%;
+     transition: 1s;
+ }
+ 
+ .accordion-item_input:not(:checked):hover~.fa-sharp {
+     transform: rotate(180deg);
+     transition: 1s;
+ }
